Page was not responsive enough, fixed it. Minor UI changes

--- a/style.css
+++ b/style.css
@@ -36,16 +36,20 @@ main {
     height: 100%;
 }
 
-a {
+.button {
     color: var(--secondary);
-    border: 1rem solid #FFA400;
-    padding: 3rem;
+    border: 0.2rem solid #FFA400;
+    padding: 2rem;
     text-decoration: none;
-    font-size: 3.2rem;
-    align-self: center;
+    font-size: 4rem;
 }
 
-a:hover {
+.button:hover {
     background-color: #444444;
-    border: 1rem solid #ffb834;
+    border: 0.2rem solid #FFD27D;
+    color: #FFFFFF;
+}
+
+img {
+    width: 8rem;
 }
